# mittaridatapumppu-persister

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  azure-build-main.yml  azure-build-release.yml  docker-compose.yml  index.html  kafka2influxdb.py  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt
.github/workflows/: build-persister.yml  test-persister.yml
