[tool.setuptools]
py-modules = []

[tool.ruff]
line-length = 120
target-version = "py311"

[project]
name = "mittaridatapumppu-persister"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version"]

dependencies = [
  "aiokafka",
  "fvhiot[kafka]@https://github.com/ForumViriumHelsinki/FVHIoT-python/archive/refs/tags/v0.4.0.zip",
  "influxdb-client",
  "kafka-python",
  "sentry-asgi",
]

[project.optional-dependencies]
dev = [
  "autoflake",
  "black",
  "pep8-naming",
  "pre-commit",
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "ruff",
]
