[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120
target-version = "py311"

[project]
name = "mittaridatapumppu-persister"
description = ""
readme = "README.md"
requires-python = ">=3.10"
version = "v0.1.0"
dependencies = [
  "fvhiot[kafka]@https://github.com/ForumViriumHelsinki/FVHIoT-python/archive/refs/tags/v0.4.1.zip",
  "influxdb-client",
  "sentry-asgi",
]

[project.optional-dependencies]
dev = [
  "autoflake",
  "black",
  "pep8-naming",
  "pre-commit",
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "ruff",
]
test = [
    "pytest",
    "requests"
]
